--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-header{
+.header-navbar{
     position: absolute;
     width: 1920px;
     height: 100px;
@@ -221,4 +221,40 @@ header{
     letter-spacing: 0.2em;
     text-transform: uppercase;
     color: #8ECAE6;
+}
+
+.blog-navbar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1925px;
+    border: 1px solid black;
+}
+.blog-navbar img, span{
+    float: left;
+    
+}
+.blog-navbar img{
+    width: 250px;
+    height: 150px;
+    object-fit: cover;
+}
+.blog-navbar span{
+    margin-left: 50px;
+    margin-top: 60px;
+    font-size: 30px;
+}
+.blog-navbar nav{
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 520px;
+   
+}
+.blog-navbar ul{
+    list-style: none;
+}
+.blog-navbar li{
+    display: inline-block;
+    padding: 0 100px;
+    font-size: 30px;
 }
