--- a/style.css
+++ b/style.css
@@ -258,3 +258,37 @@
     padding: 0 100px;
     font-size: 30px;
 }
+.blog-navbar #post{
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 1600px;
+    font-size: 30px;
+    border-radius: 50px;
+    background-color: #8ECAE6;
+    padding: 20px 60px;
+}
+.blog-content{
+    position: relative;
+    margin-top: 160px;
+    border: 1px solid black;
+    height: 1000px;
+}
+.blog-trending{
+    position: absolute;
+    border: 1px solid black;
+    width: 500px;
+}
+.blog-trending h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 71px;
+    color: #023047;
+    width: 400px;
+    border: 1px solid black;
+    line-height: 93px;
+}
+.blog-trending img{
+    position: absolute;
+    top: 240px;
+    border: 1px solid black;
+}
+
