--- a/style.css
+++ b/style.css
@@ -271,24 +271,35 @@
     position: relative;
     margin-top: 160px;
     border: 1px solid black;
-    height: 1000px;
+    height: 1200px;
 }
 .blog-trending{
     position: absolute;
     border: 1px solid black;
-    width: 500px;
+    margin-top: 50px;
+    width: 550px;
+    height: 900px;
 }
-.blog-trending h1{
+.blog-trending p{
     font-family: 'Poppins', sans-serif;
     font-size: 71px;
     color: #023047;
     width: 400px;
-    border: 1px solid black;
+    font-weight: 900;
     line-height: 93px;
+    margin-top: -1px;
+    margin-left: 30px;
 }
 .blog-trending img{
     position: absolute;
-    top: 240px;
+    top: 180px;
+    left: 30px;
+}
+.trending-box{
+    position: absolute;
+    top: 280px;
     border: 1px solid black;
+    width: 400px;
+    height: 500px;
 }
 
