--- a/style.css
+++ b/style.css
@@ -479,3 +479,26 @@
     margin-top: 7px;
     margin-left: 60px;
 }
+.button-cancel{
+    position: absolute;
+    width: 166px;
+    height: 44px;
+    left: 590px;
+    top: 505px;
+    
+}
+.button-cancel span, .button-draft span{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.33em;
+    color: #867E7E;
+}
+.button-draft{
+    position: absolute;
+    width: 166px;
+    height: 44px;
+    left: 40px;
+    top: 505px;
+}
