--- a/style.css
+++ b/style.css
@@ -502,3 +502,73 @@
     left: 40px;
     top: 505px;
 }
+.blog-entries{
+    position: relative;
+    top: 580px;
+    width: 900px;
+    height: 700px;
+    border: 1px solid black;
+}
+.entry1 {
+    position: absolute;
+    background: #F4F4F4;
+    width: 885px;
+    height: 367px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+.entry1 .entry-post{
+    position: absolute;
+    width: 806px;
+    height: 200px;
+    left: 40px;
+    top: 42px;
+    background: #FFFFFF;
+}
+.usericon2{
+    position: absolute;
+    left: 20px;
+    top: 20px; 
+}
+
+.username2{
+    position: absolute;
+    width: 300px;
+    height: 100px;
+    left: 100px;
+    top: 10px;
+}
+.username2 #profile2{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 38px;
+    color: #023047;
+    margin-top: 10px;
+}
+.username2 #user2{
+    position: absolute;
+    font-family: 'Poppins';
+    top: 40px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    letter-spacing: 0.33em;
+    color: #867E7E;
+    margin-top: 5px;
+}
+.post1{
+    position: absolute;
+    width: 739px;
+    height: 141px;
+    left: 40px;
+    top: 80px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;   
+    font-size: 14px;
+    line-height: 30px;
+    /* or 214% */
+    letter-spacing: 0.1em;
+}
