--- a/style.css
+++ b/style.css
@@ -513,7 +513,7 @@
     position: absolute;
     background: #F4F4F4;
     width: 885px;
-    height: 367px;
+    height: 667px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
 }
@@ -569,6 +569,31 @@
     font-weight: 400;   
     font-size: 14px;
     line-height: 30px;
-    /* or 214% */
     letter-spacing: 0.1em;
+}
+.entry-reply1{
+    position: absolute;
+    width: 806px;
+    height: 90px;
+    left: 40px;
+    top: 300px;
+    background: #FFFFFF;
+}
+.entry-reply2{
+    position: absolute;
+    width: 806px;
+    height: 90px;
+    left: 40px;
+    top: 400px;
+    background: #FFFFFF;
+}
+.entry-reply1 p, .entry-reply2 p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    letter-spacing: 0.1em;
+    color: #000000;
+    margin-left: 20px;
 }
