--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@
     letter-spacing: 0.33em;
     color: #FFFFFF;
 }
+.signup-title span:hover{
+    cursor: pointer;
+}
 .signup-title h1{
     margin: 0px;
     position: absolute;
@@ -249,6 +252,7 @@
 }
 .signup-fields input[type=button]:hover{
     background: #8ECAE6;
+    cursor: pointer;
 }
 .signup-alternative{
     position: absolute;
@@ -265,10 +269,15 @@
     letter-spacing: 0.2em;
     text-transform: uppercase;
     color: #8ECAE6;
+    margin-right: 10px;
 }
 .signup-alternative img{
     width: 50px;
     height: 50px;
+}
+.signup-alternative img:hover{
+    opacity: 80%;
+    cursor: pointer;
 }
 
 /*BLOG PAGE*/
