--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -10,7 +10,7 @@
 <body>
     <!--Navbar-->
    <header class="blog-navbar">
-        <img src="images/logo2.png" alt="Enter-Act Logo" onclick='location.href="enteract.html"'>
+        <img src="images/logo2.png" alt="Enter-Act Logo" onclick='location.href="enteract.ejs"'>
         <span>Enter Act</span>
         <nav>
             <ul>
