--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,9 +31,9 @@
                 
                 <div class="dropdown">
                     <ul class="nav-links">
-                        <li><a href="enteract.html" target="_blank">Homepage</a></li>
-                        <li><a href="aboutus.html" target="_blank">About Us</a></li>
-                        <li><a href="signup.html">Get Started</a></li>
+                        <li><a href="enteract.ejs" target="_blank">Homepage</a></li>
+                        <li><a href="aboutus.ejs" target="_blank">About Us</a></li>
+                        <li><a href="signup.ejs">Get Started</a></li>
                     <a class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Contact Us
                     </a>
@@ -44,7 +44,7 @@
                     </ul>
 
                     <!-- sign up button -->
-                    <li class="btn" onclick='location.href="signup.html"'>Sign Up</li>
+                    <li class="btn" onclick='location.href="signup.ejs"'>Sign Up</li>
                   </div>
                 
 
