--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <img src="images/logo.png" alt="Enter-Act Logo">
 
             <!--Get Started Button-->
-            <button class="btn-hover color-9" type="button" onclick='location.href="signup.html"'>&#x1F50D; Get Started!</button>
+            <button class="btn-hover color-9" type="button" onclick='location.href="signup.ejs"'>&#x1F50D; Get Started!</button>
             
             <!-- <div id="button">
                 <img src="images/Vector.png" alt="Search Logo">
