--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
         <!--Content-->
         <div class="signup-box">
             <div class="signup-title">
-                <span onclick='location.href="enteract.html"' title="Back to Home">ENTER-ACT</span>
+                <span onclick='location.href="enteract.ejs"' title="Back to Home">ENTER-ACT</span>
                 <h1>Micro<br>Blogging<br>made easy.</h1>
             </div>
             <div class="picture">
@@ -38,7 +38,7 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="button" value="Sign Up!" onclick='location.href="blogpage.html"'>
+                        <input type="button" value="Sign Up!" onclick='location.href="blogpage.ejs"'>
                     </form>
                 </div>
                 <div class="signup-alternative">
