--- a/public/style.css
+++ b/public/style.css
@@ -617,8 +617,8 @@ video{
     color: #023047;
 }
 .signup-fields input[type=text], .signup-fields input[type=password]{
-    width: 373px;
-    height: 33px;
+    width: 100%;
+    height: 50px;
     align-items: center;
     padding: 10px 56px;
     font-family: 'Poppins', sans-serif;
