--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
             </div>
             <div class="signup-form">
                 <h1>Welcome to Enter-Act!</h1>
-                <p>Register your account</p>
+                <p>Login account</p>
                 <div class="signup-fields">
                     <form>
                         <label for="username">Username:</label>
