--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,6 +37,7 @@
                         <input type="button" value="Login" onclick='location.href="blogpage.ejs"'>
                     </form>
                 </div>
+                <p id='login-link' onclick='location.href="signup.ejs"'>Don't have an account yet?</p>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
                     <img src="images/facebook_icon.png" title="Facebook">
