--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -41,6 +41,7 @@
                         <input type="button" value="Sign Up!" onclick='location.href="blogpage.ejs"'>
                     </form>
                 </div>
+                <p id='login-link' onclick='location.href="Login.ejs"' title="Login">Already have an account?</p>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
                     <img src="images/facebook_icon.png" title="Facebook">
