--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,14 +29,15 @@
                 <h1>Welcome to Enter-Act!</h1>
                 <p>Login account</p>
                 <div class="signup-fields">
-                    <form>
+                    <form action="/loginuser" method="post">
                         <label for="username">Username:</label>
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="button" value="Login" onclick='location.href="blogpage.ejs"'>
+                        <input type="submit" value="Login" onclick='location.href="blogpage.ejs"'>
                     </form>
                 </div>
+                <span><%= errorMessage %></span>
                 <p id='login-link' onclick='location.href="signup.ejs"'>Don't have an account yet?</p>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
