--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,7 +29,7 @@
                 <h1>Welcome to Enter-Act!</h1>
                 <p>Register your account</p>
                 <div class="signup-fields">
-                    <form>
+                    <form action="/adduser" method="post">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name"><br>
                         <label for="email">Email Address:</label>
@@ -38,10 +38,11 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="button" value="Sign Up!" onclick='location.href="blogpage.ejs"'>
+                        <input type="submit" value="Sign Up!" onclick='location.href="blogpage.ejs"'>
                     </form>
                 </div>
                 <p id='login-link' onclick='location.href="Login.ejs"' title="Login">Already have an account?</p>
+                <span><%= errorMessage %></span>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
                     <img src="images/facebook_icon.png" title="Facebook">
