--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="submit" value="Login" onclick='location.href="blogpage.ejs"'>
+                        <input type="submit" value="Login">
                     </form>
                 </div>
                 <span><%= errorMessage %></span>
