--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <!--Navbar-->
-   <header class="blog-navbar">
+    <header class="blog-navbar">
         <img src="images/logo2.png" alt="Enter-Act Logo" onclick='location.href="enteract.ejs"'>
         <span>Enter Act</span>
         <nav>
@@ -20,9 +23,9 @@
             </ul>
         </nav>
         <div id="post">Post a Blog</div>
-   </header> 
-   <!--Contents of the Blog-->
-   <div class="blog-content">
+    </header>
+    <!--Contents of the Blog-->
+    <div class="blog-content">
         <div class="blog-trending">
             <p>What's Trending:</p>
             <img src="images/Vector1.png" alt="">
@@ -59,26 +62,25 @@
         <!--Blog Posting interface-->
         <div class="blog-posts">
             <div class="blog-outerdesign">
-                <div class="blog-innerdesign">
-                    <div class="usericon">
-                        <img src="images/usericon.png" alt="User Icon">
+                <form action="/addpost" method="post">
+                    <div class="blog-innerdesign">
+                        <div class="usericon">
+                            <img src="images/usericon.png" alt="User Icon">
+                        </div>
+                        <div class="username">
+                            <p id="profile">
+                                <%=Name %>
+                            </p>
+                            <p id="user">
+                                <%=userName %>
+                            </p>
+                        </div>
+                        <textarea name="message" id="blog-post" placeholder="Write a post..."></textarea>
                     </div>
-                    <div class="username">
-                        <p id="profile"><%=Name %></p>
-                        <p id="user"><%=userName %></p>
-                    </div>
-                    <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
-                </div>
-                <!--Buttons in Posting-->
-                <div class="button-post">
-                    <span>Post</span>
-                </div>
-                <div class="button-cancel">
-                    <span>CANCEL</span> 
-                </div>
-                <div class="button-draft">
-                    <span>SAVE TO DRAFT</span>    
-                </div>
+                    <!--Buttons in Posting-->
+                    <input type="submit" value="Post">
+                    <input type="submit" value="CANCEL">
+                </form>
             </div>
             <!--Blog Entries-->
             <div class="blog-entries">
@@ -110,9 +112,9 @@
                         <span>#SPORTS</span>
                     </div>
                     <div class="highlight-games">
-                       <img src="images/valo1.png" alt="Valorant Image">
-                       <img src="images/valo2.png" alt="Valorant Image">
-                       <span>#GAMES</span>
+                        <img src="images/valo1.png" alt="Valorant Image">
+                        <img src="images/valo2.png" alt="Valorant Image">
+                        <span>#GAMES</span>
                     </div>
                     <hr>
                     <div class="highlight-news">
@@ -122,6 +124,7 @@
                 </div>
             </div>
         </div>
-   </div>
+    </div>
 </body>
+
 </html>
