--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,7 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="submit" value="Sign Up!" onclick='location.href="blogpage.ejs"'>
+                        <input type="submit" value="Sign Up!">
                     </form>
                 </div>
                 <p id='login-link' onclick='location.href="Login.ejs"' title="Login">Already have an account?</p>
