--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -57,29 +57,35 @@
             </div>
         </div>
         <!--Blog Posting interface-->
-        <div class="blog-posts">
-            <div class="blog-outerdesign">
-                <div class="blog-innerdesign">
-                    <div class="usericon">
-                        <img src="images/usericon.png" alt="User Icon">
+        <form action= actionCheck (act);  method="post">
+            <div class="blog-posts">
+                <div class="blog-outerdesign">
+                    <div class="blog-innerdesign">
+                        <div class="usericon">
+                            <img src="images/usericon.png" alt="User Icon">
+                        </div>
+                        <div class="username">
+                            <p id="profile">John Doe</p>
+                            <p id="user">@USERNAME01</p>
+                        </div>
+            
+                        <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
                     </div>
-                    <div class="username">
-                        <p id="profile"><%=Name %></p>
-                        <p id="user"><%=userName %></p>
-                    </div>
-                    <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
+                    <!--Buttons in Posting-->
+                    <!-- <div class="button-post">
+                        <span>Post</span>
+                    </div> -->
+                    <button class="button-post">Post</button> 
+                    <!-- <div class="button-cancel">
+                        <span>CANCEL</span> 
+                    </div> -->
+                    <button class="button-cancel">CANCEL</button>
+                    <!-- <div class="button-draft">
+                        <span>SAVE TO DRAFT</span>    
+                    </div> -->
+                    <button class="button-draft">SAVE TO DRAFT</button>
                 </div>
-                <!--Buttons in Posting-->
-                <div class="button-post">
-                    <span>Post</span>
-                </div>
-                <div class="button-cancel">
-                    <span>CANCEL</span> 
-                </div>
-                <div class="button-draft">
-                    <span>SAVE TO DRAFT</span>    
-                </div>
-            </div>
+            </form>
             <!--Blog Entries-->
             <div class="blog-entries">
                 <div class="entry1">
@@ -123,5 +129,7 @@
             </div>
         </div>
    </div>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+   <script src="buttonfunction.js"></script>
 </body>
 </html>
