--- a/public/style.css
+++ b/public/style.css
@@ -931,6 +931,7 @@ video{
     top: 580px;
     width: 900px;
     height: 700px;
+    box-sizing: border-box;
 }
 .entry1 {
     position: absolute;
@@ -939,6 +940,7 @@ video{
     height: 667px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
+    box-sizing: border-box;
 }
 .entry1 .entry-post{
     position: absolute;
@@ -947,6 +949,7 @@ video{
     left: 40px;
     top: 42px;
     background: #FFFFFF;
+    box-sizing: border-box;
 }
 .usericon2{
     position: absolute;
