--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -65,8 +65,8 @@
                             <img src="images/usericon.png" alt="User Icon">
                         </div>
                         <div class="username">
-                            <p id="profile">John Doe</p>
-                            <p id="user">@USERNAME01</p>
+                            <p id="profile"><%=Name %></p>
+                            <p id="user"><%=userName %></p>
                         </div>
             
                         <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
