--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!--Blog Posting interface-->
-        <form id="getaction" action="";  method="post">
+        <form id="getaction" action="" method="post">
             <div class="blog-posts">
                 <div class="blog-outerdesign">
                     <div class="blog-innerdesign">
