--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -8,6 +8,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="buttonfunctions.js"></script>
 </head>
 
 <body>
@@ -60,58 +62,51 @@
             </div>
         </div>
         <!--Blog Posting interface-->
-        <form id="getaction" action="" method="post">
-            <div class="blog-posts">
-                <div class="blog-outerdesign">
+        <div class="blog-posts">
+            <div class="blog-outerdesign">
+                <form id="getaction" action="/posting" method="post">
                     <div class="blog-innerdesign">
                         <div class="usericon">
                             <img src="images/usericon.png" alt="User Icon">
                         </div>
                         <div class="username">
                             <p id="profile"><%=Name %></p>
-                            <p id="user"><%=userName %></p>
+                            <p id="user">@<%=userName %></p>
                         </div>
-            
-                        <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
+                        <textarea name="message" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
                     </div>
-                    <!--Buttons in Posting-->
-                    <!-- <div class="button-post">
-                        <span>Post</span>
-                    </div> -->
-                    <button class="button-post">Post</button> 
-                    <!-- <div class="button-cancel">
-                        <span>CANCEL</span> 
-                    </div> -->
-                    <button class="button-cancel">CANCEL</button>
-                    <!-- <div class="button-draft">
-                        <span>SAVE TO DRAFT</span>    
-                    </div> -->
-                    <button class="button-draft">SAVE TO DRAFT</button>
-                </div>
-            </form>
+                    <button type="submit" class="button-post">Post</button> 
+                </form>
+                <button class="button-cancel">CANCEL</button>
+            </div>
             <!--Blog Entries-->
             <div class="blog-entries">
-                <%for(let i=0; i<textPost.length; i++){ %>
-                <div class="entry1">
+                <% posts.forEach(function(post){ %>
+                <div class="entry">
                     <div class="entry-post">
-                        <div class="usericon2">
+                        <div class="postusericon">
                             <img src="images/usericon.png" alt="User Icon">
                         </div>
-                        <div class="username2">
-                            <p id="profile2"><%=namePost[i] %></p>
-                            <p id="user2"><%=userPost[i] %></p>
+                        <div class="postusername">
+                            <p id="profile"><%= post.name %></p>
+                            <p id="user">@<%= post.username %></p>
                         </div>
-                        <p class="post1"><%=textPost[i] %></p>
+                        <p class="post"><%= post.message %></p>
                     </div>
-                    <div class="entry-reply1">
-                        <p id="replyuser1">Valofan</p>
-                        <p id="reply1">Give me that copium. Sentinels are gonna win this year.</p>
-                    </div>
-                    <div class="entry-reply2">
-                        <p>replies...</p>
-                    </div>
+                    <form action="/addcomment:<%= post.postid %>" method="post">
+                        <textarea name="comment" id="comment" placeholder="Write a comment..."></textarea>
+                        <button type="submit" class="comment-button">Comment</button>
+                    </form>
+                    <% comments.forEach(function (comment) { %>
+                        <% if (post.postid == comment.postid) { %>
+                        <div class="entry-reply">
+                            <p id="replyuser"><%= comment.name %></p>
+                            <p id="reply"><%= comment.comment %></p>
+                        </div>
+                        <% }; %>
+                    <% }); %>
                 </div>
-                <% } %>
+                <% }); %>
             </div>
             <div class="blog-highlights">
                 <div class="highlight-box">
@@ -133,9 +128,13 @@
                 </div>
             </div>
         </div>
-   </div>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-   <script src="buttonfunction.js"></script>
+    </div>
+    
+    <script>
+        $(".button-cancel").click(function () {
+            $("#blog-post").val("");
+        });
+    </script>
 </body>
 
 </html>
