--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Enter-Act</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="buttonfunctions.js"></script>
 </head>
