--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Sign Up Page</title>
+    <title>Login Page</title>
 </head>
 <body>
     <div class="signup-content">
