--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -76,6 +76,13 @@
                     online in a community setting is provided by microblogging websites. 
                     These websites can also be used as a quick approach to learn about
                     recent events or information that is urgent. They inform us in this way.
+                    <br>
+                    <br>
+                    -------------------------------------------------------------
+                    <br>
+
+                    NPM LIBRARIES USED: <br>
+                    body-parser, ejs, express.js, mysql, nodemon 
                 </p>
             </div>
         </div>
