--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -35,9 +35,9 @@
                 <!--Trending Topics-->
                 <nav id="topics">
                     <ul>
-                        <li>COVID-19</li>
-                        <li>ONLINE GAMES</li>
-                        <li>DLSU</li>
+                        <li><a href="https://www.doh.gov.ph/covid19tracker" target="_blank">COVID-19</a></li>
+                        <li><a href="https://genshin.hoyoverse.com/en/" target="_blank">GENSHIN IMPACT</a></li>
+                        <li><a href="https://www.dlsu.edu.ph/" target="_blank">DLSU</a></li>
                     </ul>
                 </nav>
                 <hr>
@@ -118,18 +118,18 @@
                 <div class="highlight-box">
                     <span id="title">Highlights:</span>
                     <div class="highlight-sports">
-                        <img src="images/sports.png" alt="Girls playing soccer">
+                        <img src="images/sports.png" alt="Girls playing soccer" onclick="window.open('//news.abs-cbn.com/sports', '_blank');">
                         <span>#SPORTS</span>
                     </div>
                     <div class="highlight-games">
-                        <img src="images/valo1.png" alt="Valorant Image">
-                        <img src="images/valo2.png" alt="Valorant Image">
+                        <img src="images/valo1.png" alt="Valorant Image" onclick="window.open('//playvalorant.com/en-us/', '_blank');">
+                       <img src="images/valo2.png" alt="Valorant Image" onclick="window.open('//playvalorant.com/en-us/', '_blank');">
                         <span>#GAMES</span>
                     </div>
                     <hr>
                     <div class="highlight-news">
                         <span>News:</span>
-                        <img src="images/news.png" alt="Breaking News">
+                        <img src="images/news.png" alt="Breaking News" onclick="window.open('//news.abs-cbn.com/', '_blank');">
                     </div>
                 </div>
             </div>
