--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -54,9 +54,9 @@
                 <h2>who to follow:</h2>
                 <nav id="users">
                     <ul>
-                        <li>@ValorINTEL</li>
-                        <li>@ChelDiokno</li>
-                        <li>@Itssassagurl</li>
+                        <li>@<%= toFollow[0] %></li>
+                        <li>@<%= toFollow[1] %></li>
+                        <li>@<%= toFollow[2] %></li>
                     </ul>
                 </nav>
             </div>
