--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -83,9 +83,11 @@
             <div class="blog-entries">
                 <% posts.forEach(function(post){ %>
                 <div class="entry">
-                    <form action="/deletepost:<%=post.postid%>" method="post">
-                        <button type="submit" class="delete-button">Delete post</button>
-                    </form>
+                    <% if (userName == post.username) { %>
+                        <form action="/deletepost:<%=post.postid%>" method="post">
+                            <button type="submit" class="delete-button">Delete post</button>
+                        </form>
+                    <% } %>
                     <div class="entry-post">
                         <div class="postusericon">
                             <img src="images/usericon.png" alt="User Icon">
